# finetune-web-ui

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  DOCKER_README.md  README.md  check_cuda.py  launch.py  pip.Dockerfile  poetry.Dockerfile  poetry.toml  pyproject.toml  requirements.txt  run.py  test.py  uv.Dockerfile  webui.py
configs/: datasets.json  models.json
modules/: arguments.py  async_worker.py  config.py  download.py  load_datasets_lists.py  load_model_lists.py  logly.py  train.py
modules/finetune/: unsloth.py
modules/unsloth_trainer/: train.py
ui/components/: AdvancedOptionsUI.py  Export.py  FineTuneHandler.py  Settings.py
